Section 3.27 : Seeding the Database.

--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -215,6 +215,10 @@
     <Compile Include="Migrations\201908201123480_AddMembershipType.Designer.cs">
       <DependentUpon>201908201123480_AddMembershipType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201908201132518_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201908201132518_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201908201132518_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -313,6 +317,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201908201123480_AddMembershipType.resx">
       <DependentUpon>201908201123480_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201908201132518_PopulateMembershipTypes.resx">
+      <DependentUpon>201908201132518_PopulateMembershipTypes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
