--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -219,6 +219,10 @@
     <Compile Include="Migrations\201908201132518_PopulateMembershipTypes.Designer.cs">
       <DependentUpon>201908201132518_PopulateMembershipTypes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201908202238591_ApplyAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\201908202238591_ApplyAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>201908202238591_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -320,6 +324,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201908201132518_PopulateMembershipTypes.resx">
       <DependentUpon>201908201132518_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201908202238591_ApplyAnnotationsToCustomerName.resx">
+      <DependentUpon>201908202238591_ApplyAnnotationsToCustomerName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
