--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -223,6 +223,14 @@
     <Compile Include="Migrations\201908202238591_ApplyAnnotationsToCustomerName.Designer.cs">
       <DependentUpon>201908202238591_ApplyAnnotationsToCustomerName.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201908210054010_AddNameToMembershipType.cs" />
+    <Compile Include="Migrations\201908210054010_AddNameToMembershipType.Designer.cs">
+      <DependentUpon>201908210054010_AddNameToMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201908210057193_UpdateMembershipTypesName.cs" />
+    <Compile Include="Migrations\201908210057193_UpdateMembershipTypesName.Designer.cs">
+      <DependentUpon>201908210057193_UpdateMembershipTypesName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -327,6 +335,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201908202238591_ApplyAnnotationsToCustomerName.resx">
       <DependentUpon>201908202238591_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201908210054010_AddNameToMembershipType.resx">
+      <DependentUpon>201908210054010_AddNameToMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201908210057193_UpdateMembershipTypesName.resx">
+      <DependentUpon>201908210057193_UpdateMembershipTypesName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
