--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -235,6 +235,10 @@
     <Compile Include="Migrations\201908210550390_AddDOBToCustomer.Designer.cs">
       <DependentUpon>201908210550390_AddDOBToCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201908210612412_AddMovieToDBContext.cs" />
+    <Compile Include="Migrations\201908210612412_AddMovieToDBContext.Designer.cs">
+      <DependentUpon>201908210612412_AddMovieToDBContext.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -348,6 +352,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201908210550390_AddDOBToCustomer.resx">
       <DependentUpon>201908210550390_AddDOBToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201908210612412_AddMovieToDBContext.resx">
+      <DependentUpon>201908210612412_AddMovieToDBContext.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
