--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -243,6 +243,10 @@
     <Compile Include="Migrations\201908210617530_AddGenreTypeToMovie.Designer.cs">
       <DependentUpon>201908210617530_AddGenreTypeToMovie.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201908211122108_SeedingGenreTypes.cs" />
+    <Compile Include="Migrations\201908211122108_SeedingGenreTypes.Designer.cs">
+      <DependentUpon>201908211122108_SeedingGenreTypes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -363,6 +367,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201908210617530_AddGenreTypeToMovie.resx">
       <DependentUpon>201908210617530_AddGenreTypeToMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201908211122108_SeedingGenreTypes.resx">
+      <DependentUpon>201908211122108_SeedingGenreTypes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
